src/components/VideoPlayer/VideoPlayer.css
.nft_video_player {
  height: 100%;
  display: flex;
  flex-direction: column;
  align-items: end;
}
.nft_video_player a {
  height: 100%;
}
.nft_video_player video {
  width: 100%;
  display: block;
  object-fit: fill;
  height: 100%;
}

.play_buttom {
  display: flex;
  height: 3rem;
  width: 3rem;
  border-radius: 50%;
  z-index: 9;
  background-color: var(--ms-mp-gray-light);
  cursor: pointer;
  border: none;
  margin-top: -24%;
  margin-right: 0.4rem;
}
.play_buttom:hover {
  background-color: var(--ms-mp-gray-light-alt);
}
.react-icons {
  margin: auto;
}

